--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-dom": "18.2.15",
     "autoprefixer": "10.4.16",
     "axios": "^1.6.2",
+    "axios-retry": "^3.9.1",
     "chalk": "^5.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
